[tool.poetry]
name = "bispebjerg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
openpyxl = "^3.0.9"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
ipython = "^7.30.1"
pdbpp = "^0.10.3"
ipdb = "^0.13.9"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
